<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="label_1">Enter your loan amount:</string>
    <string name="label_2">Enter your APR:</string>
    <string name="label_3">Enter your loan years:</string>
    <string name="label_4">Your loan payment:</string>
    <string name="label_5">Your loan amount:</string>
    <string name="label_6">Your number of payments:</string>
    <string name="calc_button">Calculate</string>
    <string name="reset_button">Reset</string>
    <string name="table_button">Amortization Table</string>
    <string name="place_holder">Place Holder</string>
    <string name="hint1">$0.00</string>
    <string name="hint2">0.00%</string>
    <string name="hint3">0</string>
</resources>
