<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <!-- Row 1 -->
    <TextView
        android:id="@+id/label_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".03"
        app:layout_constraintHorizontal_bias=".1"
        android:text="@string/label_1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/lightBlue"
        />
    <EditText
        android:id="@+id/loan_amount"
        android:inputType="numberDecimal"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/label_1"
        app:layout_constraintLeft_toRightOf="@id/label_1"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        android:hint="@string/hint1"
        android:autofillHints="@string/hint1"
        />

    <!-- Row 2 -->
    <TextView
        android:id="@+id/label_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/label_1"
        app:layout_constraintTop_toBottomOf="@id/label_1"
        android:layout_marginTop="15dp"
        android:text="@string/label_2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        />
    <EditText
        android:id="@+id/apr_amount"
        android:inputType="numberDecimal"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/label_2"
        app:layout_constraintLeft_toLeftOf="@id/loan_amount"
        android:textSize="20sp"
        android:hint="@string/hint2"
        android:autofillHints="@string/hint2"
        />

    <!-- Row 3 -->
    <TextView
        android:id="@+id/label_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/label_2"
        app:layout_constraintTop_toBottomOf="@id/label_2"
        android:layout_marginTop="15dp"
        android:text="@string/label_3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/darkGreen"
        />
    <EditText
        android:id="@+id/years_amount"
        android:inputType="numberDecimal"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/label_3"
        app:layout_constraintLeft_toLeftOf="@id/apr_amount"
        android:textSize="20sp"
        android:hint="@string/hint3"
        android:autofillHints="@string/hint3"
        />

    <!-- Row 4 -->
    <TextView
        android:id="@+id/label_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/label_3"
        app:layout_constraintTop_toBottomOf="@id/label_3"
        android:layout_marginTop="15dp"
        android:text="@string/label_4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/indigo"
        />
    <TextView
        android:id="@+id/loan_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/years_amount"
        app:layout_constraintTop_toTopOf="@id/label_4"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <!-- Row 5 -->
    <TextView
        android:id="@+id/interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_4"
        app:layout_constraintStart_toStartOf="@id/label_4"
        app:layout_constraintRight_toRightOf="@id/years_amount"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/maroon"
        />

    <!-- Row 6 -->
    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/interest"
        app:layout_constraintLeft_toLeftOf="@id/label_3"
        android:layout_marginTop="15dp"
        android:text="@string/calc_button"
        android:padding="10dp"
        android:onClick="compute"
        android:background="@color/neonGreen"
        />
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/calc_button"
        app:layout_constraintLeft_toRightOf="@id/calc_button"
        app:layout_constraintRight_toLeftOf="@id/table_button"
        android:text="@string/reset_button"
        android:padding="10dp"
        android:onClick="clear"
        android:background="@color/lightRed"
        />
    <Button
        android:id="@+id/table_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/calc_button"
        app:layout_constraintRight_toRightOf="@id/years_amount"
        android:text="@string/table_button"
        android:padding="10dp"
        android:onClick="tableActivity"
        android:background="@color/pink"
        />

</androidx.constraintlayout.widget.ConstraintLayout>