<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity"
    >

    <ScrollView
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/loan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginStart="25dp"
                android:text="@string/label_5"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/lightBlue"
                />

            <TextView
                android:id="@+id/payments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginStart="25dp"
                android:text="@string/label_6"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/darkGreen"
                />

            <TextView
                android:id="@+id/table_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:layout_marginStart="25dp"
                android:text="@string/table_button"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/maroon"
                />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>